# rust_subscription_checker_bot

./: .gitignore  Cargo.toml
src/: configuration.rs  handlers.rs  lib.rs  main.rs
