[package]
name = "tg_bot_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
teloxide = { version = "0.13", features = ["macros"] }
log = "0.4"
pretty_env_logger = "0.5"
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }
dotenv = "0.15.0"
config = "0.14.0"
serde = {version = "1.0.210", features = ["derive"]}
serde-aux = "4.5.0"
reqwest = "0.12.7"
teloxide-core = {version ="0.10.1", features = ["throttle"]}
